--- a/HookahProject/Application/LaunchScreen.storyboard
+++ b/HookahProject/Application/LaunchScreen.storyboard
@@ -16,8 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="whitewolf" translatesAutoresizingMaskIntoConstraints="NO" id="1Ef-qB-kia">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="1Ef-qB-kia">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="739"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
@@ -25,8 +25,8 @@
                         <constraints>
                             <constraint firstItem="1Ef-qB-kia" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Hmj-lj-y6a"/>
                             <constraint firstAttribute="trailing" secondItem="1Ef-qB-kia" secondAttribute="trailing" id="LfM-Fj-H8E"/>
-                            <constraint firstItem="1Ef-qB-kia" firstAttribute="bottom" secondItem="Bcu-3y-fUS" secondAttribute="bottom" id="NZf-9g-oyF"/>
-                            <constraint firstItem="1Ef-qB-kia" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" id="Ta9-mv-NiP"/>
+                            <constraint firstItem="1Ef-qB-kia" firstAttribute="bottom" secondItem="Bcu-3y-fUS" secondAttribute="bottom" constant="-123" id="NZf-9g-oyF"/>
+                            <constraint firstItem="1Ef-qB-kia" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="-44" id="Ta9-mv-NiP"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -36,6 +36,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="whitewolf" width="942" height="1352"/>
+        <image name="logo" width="245.5" height="195.5"/>
     </resources>
 </document>
